# janus-gateway-mplugin

./: Makefile.am  README.md  configure.ac  libjanus_audiobridge2.c  recorder.c  recorder.h
conf/: janus.plugin.audiobridge2.cfg.sample
html/: audiobridge2.html  audiobridgetest2.js
